@@ -1,7 +1,6 @@
 package com.adaptris.aws2.s3.retry;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 
 import java.io.ByteArrayInputStream;
@@ -17,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.junit.jupiter.api.Assertions;
@@ -39,6 +37,7 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
 import software.amazon.awssdk.services.s3.model.DeleteObjectResponse;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectResponse;
 import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
 import software.amazon.awssdk.services.s3.model.ListObjectsV2Response;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
@@ -74,15 +73,88 @@ public class S3RetryStoreTest extends BaseCase {
 
     try {
       start(store);
-      Iterable<RemoteBlob> blobs = store.report();
+      Iterable<RemoteBlob> blobs = store.report(false);
       List<String> blobNames = StreamSupport.stream(blobs.spliterator(), false)
-          .map((blob) -> blob.getName()).collect(Collectors.toList());
-      assertTrue(blobNames.contains(msgId1));
-      assertTrue(blobNames.contains(msgId2));
+          .map(RemoteBlob::getName).toList();
+      assertTrue(blobNames.stream().anyMatch(name -> name.contains(msgId1)));
+      assertTrue(blobNames.stream().anyMatch(name -> name.contains(msgId2)));
     } finally {
       stop(store);
     }
   }
+
+    @Test
+    public void testReportWithErrorMessage_Success() throws Exception {
+      S3Client client = Mockito.mock(S3Client.class);
+      ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+      Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+      AmazonS3Connection conn = buildConnection(wrapper);
+
+      String msgId = UUID.randomUUID().toString();
+      List<S3Object> list = Arrays.asList(
+          createSummary("bucket", "MyPrefix/" + msgId + "/payload.blob"),
+          createSummary("bucket", "MyPrefix/" + msgId + "/metadata.properties")
+      );
+      ListObjectsV2Response result = Mockito.mock(ListObjectsV2Response.class);
+      Mockito.when(result.contents()).thenReturn(list);
+      Mockito.when(client.listObjectsV2(any(ListObjectsV2Request.class))).thenReturn(result);
+
+      // Mock stacktrace.txt content
+      String stacktraceContent = "Simulated error message\nSecond line of stacktrace";
+      GetObjectResponse mockResponse = Mockito.mock(GetObjectResponse.class);
+      ResponseInputStream<GetObjectResponse> responseStream = new ResponseInputStream<>(
+          mockResponse,
+          AbortableInputStream.create(new ByteArrayInputStream(stacktraceContent.getBytes(StandardCharsets.UTF_8))));
+      Mockito.when(client.getObject(any(GetObjectRequest.class))).thenReturn(responseStream);
+
+      S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+      try {
+        start(store);
+        Iterable<RemoteBlob> blobs = store.report(true);
+        for (RemoteBlob blob : blobs) {
+          // The blob name should be just the msgId
+          assertEquals(msgId, blob.getName());
+          // The error summary should contain the first line of the stacktrace
+          assertEquals("Simulated error message", blob.getErrorSummary());
+        }
+      } finally {
+        stop(store);
+      }
+    }
+
+    @Test
+    public void testReportWithErrorMessage_Exception() throws Exception {
+      S3Client client = Mockito.mock(S3Client.class);
+      ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+      Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+      AmazonS3Connection conn = buildConnection(wrapper);
+
+      String msgId = UUID.randomUUID().toString();
+      List<S3Object> list = Arrays.asList(
+          createSummary("bucket", "MyPrefix/" + msgId + "/payload.blob"),
+          createSummary("bucket", "MyPrefix/" + msgId + "/metadata.properties")
+      );
+      ListObjectsV2Response result = Mockito.mock(ListObjectsV2Response.class);
+      Mockito.when(result.contents()).thenReturn(list);
+      Mockito.when(client.listObjectsV2(any(ListObjectsV2Request.class))).thenReturn(result);
+      Mockito.when(client.getObject(any(GetObjectRequest.class))).thenThrow(new RuntimeException("Simulated error"));
+
+      S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+      try {
+        start(store);
+        Iterable<RemoteBlob> blobs = store.report(true);
+        for (RemoteBlob blob : blobs) {
+          // When stacktrace retrieval fails, the blob name should just be the msgId
+          assertEquals(msgId, blob.getName());
+          // And errorSummary should be null since we couldn't retrieve it
+          assertNull(blob.getErrorSummary());
+        }
+      } finally {
+        stop(store);
+      }
+    }
 
 
   // Designed to check to toMessageId method and other things that are predicated on getPrefix
@@ -111,97 +183,27 @@ public class S3RetryStoreTest extends BaseCase {
     }
   }
 
-//  @Test
-//  public void testWrite_PayloadMetadata() throws Exception {
-//    Upload uploadObject = Mockito.mock(Upload.class);
-//
-//    Map<String, String> userMetadata = new HashMap<>();
-//    userMetadata.put("hello", "world");
-//    Mockito.when(uploadObject.isDone()).thenReturn(false, false, true);
-//    Mockito.doAnswer((i) -> {
-//      return null;
-//    }).when(uploadObject).waitForCompletion();
-//
-//    S3Client client = Mockito.mock(S3Client.class);
-//    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
-//    Mockito.when(wrapper.amazonClient()).thenReturn(client);
-//
-//    AmazonS3Connection conn = buildConnection(wrapper);
-//
-//    // TODO find out what happens in this situation
-////    Mockito.when(transferManager.upload((PutObjectRequest) any())).thenReturn(uploadObject);
-//
-//    AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("hello", "UTF-8");
-//    msg.addMessageHeader("hello", "world");
-//
-//    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
-//    try {
-//      start(store);
-//      store.write(msg);
-//    } finally {
-//      stop(store);
-//    }
-//  }
-//
-//  @Test
-//  public void testWrite_PayloadMetadataStacktracen() throws Exception {
-//    Upload uploadObject = Mockito.mock(Upload.class);
-//
-//    Map<String, String> userMetadata = new HashMap<>();
-//    userMetadata.put("hello", "world");
-//    Mockito.when(uploadObject.isDone()).thenReturn(false, false, true);
-//    Mockito.doAnswer((i) -> {
-//      return null;
-//    }).when(uploadObject).waitForCompletion();
-//
-//    S3Client client = Mockito.mock(S3Client.class);
-//    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
-//    Mockito.when(wrapper.amazonClient()).thenReturn(client);
-//
-//    AmazonS3Connection conn = buildConnection(wrapper);
-//
-//    // TODO find out what happens in this situation
-////    Mockito.when(transferManager.upload((PutObjectRequest) any())).thenReturn(uploadObject);
-//
-//    AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("hello", "UTF-8");
-//    msg.addObjectHeader(CoreConstants.OBJ_METADATA_EXCEPTION, new Exception());
-//    msg.addMessageHeader("hello", "world");
-//
-//    S3RetryStore store =
-//        new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
-//    try {
-//      start(store);
-//      store.write(msg);
-//    } finally {
-//      stop(store);
-//    }
-//  }
-
   @Test
   public void testWrite_Exception() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
 
-    Assertions.assertThrows(InterlokException.class, () -> {
-      S3Client client = Mockito.mock(S3Client.class);
-      ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
-      Mockito.when(wrapper.amazonClient()).thenReturn(client);
+    AmazonS3Connection conn = buildConnection(wrapper);
 
-      AmazonS3Connection conn = buildConnection(wrapper);
+    Mockito.when(client.putObject((PutObjectRequest)any(), (RequestBody)any())).thenThrow(new RuntimeException());
 
-      Mockito.when(client.putObject((PutObjectRequest)any(), (RequestBody)any())).thenThrow(new RuntimeException());
+    AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("hello", "UTF-8");
+    msg.addMessageHeader("hello", "world");
 
-      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("hello", "UTF-8");
-      msg.addMessageHeader("hello", "world");
-
-      S3RetryStore store =
-          new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
-      try {
-        start(store);
-        store.write(msg);
-      } finally {
-        stop(store);
-      }
-    });
-    
+    S3RetryStore store =
+        new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+      Assertions.assertThrows(InterlokException.class, () -> store.write(msg));
+    } finally {
+      stop(store);
+    }
   }
 
   @Test
@@ -252,26 +254,23 @@ public class S3RetryStoreTest extends BaseCase {
 
   @Test
   public void testGetMetadata_Exception() throws Exception {
-    Assertions.assertThrows(InterlokException.class, () -> {
-      S3Client client = Mockito.mock(S3Client.class);
-      ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
-      Mockito.when(wrapper.amazonClient()).thenReturn(client);
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
 
-      Mockito.when(client.getObject((GetObjectRequest) any()))
-          .thenThrow(new RuntimeException());
+    Mockito.when(client.getObject((GetObjectRequest) any()))
+        .thenThrow(new RuntimeException());
 
-      AmazonS3Connection conn = buildConnection(wrapper);
+    AmazonS3Connection conn = buildConnection(wrapper);
 
-      S3RetryStore store =
-          new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
-      try {
-        start(store);
-        Map<String, String> map = store.getMetadata("XXXX");
-        assertTrue(map.containsKey(CLASS_UNDER_TEST_KEY));
-      } finally {
-        stop(store);
-      }
-    });
+    S3RetryStore store =
+        new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+      Assertions.assertThrows(InterlokException.class, () -> store.getMetadata("XXXX"));
+    } finally {
+      stop(store);
+    }
   }
 
   @Test
@@ -302,6 +301,7 @@ public class S3RetryStoreTest extends BaseCase {
       assertTrue(msg.headersContainsKey(CLASS_UNDER_TEST_KEY));
       assertEquals(S3RetryStore.class.getCanonicalName(),
           msg.getMetadataValue(CLASS_UNDER_TEST_KEY));
+      Mockito.verify(client, Mockito.times(3)).deleteObject((DeleteObjectRequest) any());
     } finally {
       stop(store);
     }
@@ -309,25 +309,264 @@ public class S3RetryStoreTest extends BaseCase {
 
   @Test
   public void testBuildForRetry_Failure() throws Exception {
-    Assertions.assertThrows(InterlokException.class, () -> {
-      S3Client client = Mockito.mock(S3Client.class);
-      ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
-      Mockito.when(wrapper.amazonClient()).thenReturn(client);
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
 
-      Mockito.when(client.getObject((GetObjectRequest) any())).thenThrow(new RuntimeException());
+    Mockito.when(client.getObject((GetObjectRequest) any())).thenThrow(new RuntimeException());
 
-      AmazonS3Connection conn = buildConnection(wrapper);
+    AmazonS3Connection conn = buildConnection(wrapper);
 
-      S3RetryStore store =
-          new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
-      try {
-        start(store);
-        Map<String, String> metadata = new HashMap<>();
-        AdaptrisMessage msg = store.buildForRetry("XXX", metadata, null);
-      } finally {
-        stop(store);
-      }
-    });
+    S3RetryStore store =
+        new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+      Map<String, String> metadata = new HashMap<>();
+      Assertions.assertThrows(InterlokException.class, () -> store.buildForRetry("XXX", metadata, null));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testGetStackTrace_Success() throws Exception {
+    final String STACKTRACE_CONTENT = "stacktrace content";
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    // Mock the response object
+    GetObjectResponse mockResponse = Mockito.mock(GetObjectResponse.class);
+
+    ResponseInputStream<GetObjectResponse> responseStream =
+      new ResponseInputStream<>(mockResponse, AbortableInputStream.create(
+        new ByteArrayInputStream(STACKTRACE_CONTENT.getBytes(StandardCharsets.UTF_8))));
+
+    Mockito.when(client.getObject(any(GetObjectRequest.class))).thenReturn(responseStream);
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withConnection(conn);
+    try {
+      start(store);
+      String stackTrace = store.getStackTrace("messageId");
+      assertEquals(STACKTRACE_CONTENT, stackTrace);
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testGetStackTrace_Exception() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    Mockito.when(client.getObject(any(GetObjectRequest.class))).thenThrow(new RuntimeException());
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withConnection(conn);
+    try {
+      start(store);
+      assertThrows(InterlokException.class, () -> store.getStackTrace("messageId"),
+          "Exception should be wrapped in InterlokException");
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testMetadataAsMessage() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withConnection(conn);
+    try {
+      start(store);
+
+      // Create a message with metadata
+      AdaptrisMessage originalMsg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test payload");
+      originalMsg.addMessageHeader("key1", "value1");
+      originalMsg.addMessageHeader("key2", "value2");
+      originalMsg.addMessageHeader(CLASS_UNDER_TEST_KEY, "testValue");
+
+      // Use reflection to access the private method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("metadataAsMessage", AdaptrisMessage.class);
+      method.setAccessible(true);
+      AdaptrisMessage metadataMsg = (AdaptrisMessage) method.invoke(store, originalMsg);
+
+      // Verify the metadata message contains properties
+      assertNotNull(metadataMsg);
+      String content = metadataMsg.getContent();
+      assertTrue(content.contains("key1"));
+      assertTrue(content.contains("value1"));
+      assertTrue(content.contains("key2"));
+      assertTrue(content.contains("value2"));
+      assertTrue(content.contains(CLASS_UNDER_TEST_KEY));
+      assertTrue(content.contains("testValue"));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testUploadMetadata() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    // Mock successful upload
+    Mockito.when(client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
+        .thenReturn(null);
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+
+      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test");
+      msg.setUniqueId("test-message-id");
+      msg.addMessageHeader("testKey", "testValue");
+
+      // Use reflection to call private uploadMetadata method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("uploadMetadata", AdaptrisMessage.class);
+      method.setAccessible(true);
+      method.invoke(store, msg);
+
+      // Verify putObject was called
+      Mockito.verify(client, Mockito.atLeastOnce()).putObject(any(PutObjectRequest.class), any(RequestBody.class));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testUploadMetadata_Exception() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    // Mock upload failure
+    Mockito.when(client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
+        .thenThrow(new RuntimeException("Upload failed"));
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+
+      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test");
+      msg.setUniqueId("test-message-id");
+      msg.addMessageHeader("testKey", "testValue");
+
+      // Use reflection to call private uploadMetadata method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("uploadMetadata", AdaptrisMessage.class);
+      method.setAccessible(true);
+      Assertions.assertThrows(Exception.class, () -> method.invoke(store, msg));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testUploadStacktrace_WithStacktrace() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    // Mock successful upload
+    Mockito.when(client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
+        .thenReturn(null);
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+
+      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test");
+      msg.setUniqueId("test-message-id");
+
+      // Add an exception to the message to create a stacktrace
+      Exception testException = new Exception("Test exception");
+      msg.addObjectHeader(com.adaptris.core.CoreConstants.OBJ_METADATA_EXCEPTION, testException);
+
+      // Use reflection to call private uploadStacktrace method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("uploadStacktrace", AdaptrisMessage.class);
+      method.setAccessible(true);
+      method.invoke(store, msg);
+
+      // Verify putObject was called (stacktrace was uploaded)
+      Mockito.verify(client, Mockito.atLeastOnce()).putObject(any(PutObjectRequest.class), any(RequestBody.class));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testUploadStacktrace_NoStacktrace() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+
+      // Create message without exception/stacktrace
+      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test");
+      msg.setUniqueId("test-message-id");
+
+      // Use reflection to call private uploadStacktrace method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("uploadStacktrace", AdaptrisMessage.class);
+      method.setAccessible(true);
+      method.invoke(store, msg);
+
+      // Verify putObject was NOT called (no stacktrace to upload)
+      Mockito.verify(client, Mockito.never()).putObject(any(PutObjectRequest.class), any(RequestBody.class));
+    } finally {
+      stop(store);
+    }
+  }
+
+  @Test
+  public void testUploadStacktrace_Exception() throws Exception {
+    S3Client client = Mockito.mock(S3Client.class);
+    ClientWrapper wrapper = Mockito.mock(ClientWrapper.class);
+    Mockito.when(wrapper.amazonClient()).thenReturn(client);
+
+    AmazonS3Connection conn = buildConnection(wrapper);
+
+    // Mock upload failure
+    Mockito.when(client.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
+        .thenThrow(new RuntimeException("Upload failed"));
+
+    S3RetryStore store = new S3RetryStore().withBucket("bucket").withPrefix("MyPrefix").withConnection(conn);
+    try {
+      start(store);
+
+      AdaptrisMessage msg = AdaptrisMessageFactory.getDefaultInstance().newMessage("test");
+      msg.setUniqueId("test-message-id");
+
+      // Add an exception to the message
+      Exception testException = new Exception("Test exception");
+      msg.addObjectHeader(com.adaptris.core.CoreConstants.OBJ_METADATA_EXCEPTION, testException);
+
+      // Use reflection to call private uploadStacktrace method
+      java.lang.reflect.Method method = S3RetryStore.class.getDeclaredMethod("uploadStacktrace", AdaptrisMessage.class);
+      method.setAccessible(true);
+      Assertions.assertThrows(Exception.class, () -> method.invoke(store, msg));
+    } finally {
+      stop(store);
+    }
   }
 
   private AmazonS3Connection buildConnection(ClientWrapper wrapper) {
